# estimagic_tables_examples

./: .pre-commit-config.yaml  CHANGES.md  CITATION  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yml
paper/: estimagic_tables_examples.tex  reproducible_research_template.tex  reproducible_research_template_pres.tex  task_paper.py
src/estimagic_tables_examples/: config.py
src/estimagic_tables_examples/create_tables/: __init__.py  task_descriptives_table.py  task_simple_statsmodels.py  task_simple_statsmodels_table.py  task_two_step_statsmodels.py  task_two_step_statsmodels_advanced.py  task_two_step_statsmodels_simple.py
src/estimagic_tables_examples/original_data/: diabetes.csv
src/reproducible_research_template/analysis/: task_analysis.py
src/reproducible_research_template/data_management/: __init__.py  task_data_management.py
src/reproducible_research_template/final/: __init__.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
