[metadata]
name = reproducible_research_template
description = Reproducible Research Template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ariannaw.rosenbluth/reproducible_research_template
author = Arianna W. Rosenbluth
author_email = ariannaw.rosenbluth@nowhere.edu
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/ariannaw.rosenbluth/reproducible_research_template
    Documentation = https://github.com/ariannaw.rosenbluth/reproducible_research_template
    Github = https://github.com/ariannaw.rosenbluth/reproducible_research_template
    Tracker = https://github.com/ariannaw.rosenbluth/reproducible_research_template/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/reproducible_research_template/_version.py
