[metadata]
name = estimagic_tables_examples
description = Reproducible Research Template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OpenSourceEconomics/estimagic_tables_examples
author = Christian Zimpelmann
author_email = zimpelmann.christian@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/OpenSourceEconomics/estimagic_tables_examples
    Documentation = https://github.com/OpenSourceEconomics/estimagic_tables_examples
    Github = https://github.com/OpenSourceEconomics/estimagic_tables_examples
    Tracker = https://github.com/OpenSourceEconomics/estimagic_tables_examples/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.10
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/estimagic_tables_examples/_version.py
